# health-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 079f31fe42d8_seed_initial_data_for_patient_clinician_.py  5cb52f69e1f2_initial_migration.py  e46bf9dd6494_your_message.py  f13b9c40a552_initial_migration.py
app/: config.py  main.py
app/db/: __init__.py
app/models/: __init__.py  clinician.py  enums.py  medication.py  medication_request.py  patient.py
app/repositories/: medication_request.py
app/routes/: create_medication.py  read_medication.py  update_medication_request.py
app/schema/: clinician.py  enums.py  medication.py  medication_request.py  patient.py
tests/: test.db  test_api.py  test_db.py  test_models.py  test_repositories.py  test_schemas.py
